tests/lean/242.lean
syntax "0" : term
syntax "'a'" : term
syntax "`a" : term
syntax "\"a" : term
